# fishregression

./: Dockerfile  README.md  pyproject.toml
LB/: Dockerfile  default.conf
note/: 0909.ipynb  LinearRegression.ipynb
src/fishregression/: cli.py  main.py
src/fishregression/model/: manager.py  model.pkl
